# eloApp-2.0

./: .gitignore  README.md  build.sh  first-build.sh  main.py  pyproject.toml
src/eloApp/database/: database.py  models.py
