[project]
name = "eloapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "sqlalchemy>=2.0.42",
    "google-auth-oauthlib>=1.2.2",
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.3",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
    "streamlit-authenticator>=0.4.2",
]
